--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "ejs-mate": "^2.3.0",
     "express": "^4.15.3",
     "mongoose": "^4.10.6",
-    "morgan": "^1.8.2"
+    "morgan": "^1.8.2",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1"
   }
 }
