--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^4.10.6",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
-    "passport-facebook": "^2.1.1"
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth2": "^0.1.6"
   }
 }
